Added vuln apis for dashboard
